<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile_item"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/fav_res_item"
            android:icon="@drawable/ic_favorite_unselected"
            android:title="@string/favourite_restaurants" />

        <item
            android:id="@+id/order_history_item"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faq_item"
            android:icon="@drawable/ic_help"
            android:title="@string/faq_s" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout_item"
            android:icon="@drawable/ic_exit"
            android:title="@string/log_out" />
    </group>
</menu>