<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/greyBackground"
    tools:context=".activities.ForgotPassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibUp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:onClick="forgotPassUp"
            android:padding="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_up"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvSignUpHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="15"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="15"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/netflix_font"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/retrieve_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</LinearLayout>