<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    android:orientation="vertical"
    tools:context=".activities.ForgotPassActivity">

    <TextView
        android:id="@+id/tvOtpHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/otp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_bg"
        android:ems="15"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_otp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpHint"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="15"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_new_password_min"
        android:inputType="textPassword"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOtp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etRePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="15"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_repassword"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/netflix_font"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:text="@string/retrieve_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRePassword"
        app:layout_constraintVertical_bias="0" />

    <ProgressBar
        android:id="@+id/contentLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:padding="165dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>