<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/greyBackground"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ivRegisterUp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:onClick="signUpBackIntent"
            android:padding="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_up"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvSignUpHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/SignUp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="15"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="15"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/enter_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="15"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/enter_phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="15"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/enter_address"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="15"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/enter_password_min"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/etRePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="15"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/enter_re_password"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/netflix_font"
                android:onClick="singUpConfirm"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="@string/SignUp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>